# DocIQ

./: .env.example  .gitignore  DocIQ_Complete_Blueprint.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260417_0001_initial.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  audit.py  celery_app.py  db.py  deps.py  exceptions.py  http.py  llm.py  logging.py  middleware.py  observability.py  qdrant.py  rate_limit.py  runtime_paths.py  security.py  settings.py  storage.py
backend/app/modules/admin/: router.py  seed.py
backend/app/modules/analytics/: router.py  service.py
backend/app/modules/auth/: models.py  router.py  schemas.py  service.py
backend/app/modules/documents/: __init__.py  models.py  pipeline.py  router.py  schemas.py  service.py
backend/app/modules/extraction/: __init__.py  models.py
backend/app/modules/feedback/: __init__.py  exporter.py  models.py  router.py
backend/app/modules/search/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/validation/: __init__.py  anomaly_detector.py  models.py  router.py  rule_evaluator.py  service.py
backend/app/modules/workflows/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/shared/: __init__.py
backend/dociq_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/workers/: __init__.py  base_worker.py  classification_worker.py  embedding_worker.py  extraction_worker.py  layout_worker.py  ocr_worker.py  preprocessing_worker.py  validation_worker.py  workflow_worker.py
(+108 files in other folders)
